<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_connect">

    <TextView
        android:id="@+id/id_main_connect_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="@dimen/frag_title_dist"
        android:text="@string/connect_main_text"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/id_main_connect_text"
        android:layout_marginTop="@dimen/margin_title_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_corners_rectangle"
        android:id="@+id/id_bluetooth_status">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_radius"
            android:layout_marginStart="@dimen/margin_radius"
            app:srcCompat="@drawable/ic_bluetooth_blue_24dp" />

        <TextView
            android:id="@+id/id_selected_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/select_device"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_radius"
            android:layout_marginStart="@dimen/margin_radius"
            android:textColor="@color/colorPrimaryDark"
            />



        <Switch
            android:id="@+id/id_bond_switch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:thumbTint="@color/DarkBlue"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_info_connect_text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/id_bluetooth_status"
        android:layout_marginTop="30dp"
        android:text="@string/infotext"/>

    <LinearLayout
        android:id="@+id/id_paired_devices_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/id_info_connect_text"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/paired_devices_text"
            android:text="@string/paired_devices"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            />


        <ImageButton
            android:id="@+id/id_refresh_paired_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="refresh_paired_button"
            app:srcCompat="@drawable/ic_refresh_blue_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent" />

    </LinearLayout>

    <ListView
        android:id="@+id/id_bluetooth_list_paired"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="180dp"
        android:layout_below="@id/id_paired_devices_layout"
        android:background="@android:color/transparent">


    </ListView>

    <LinearLayout
        android:id="@+id/id_discover_devices_lin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/id_bluetooth_list_paired"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/discover_devices_text"
            android:text="@string/discovered_devices"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            />


        <ImageButton
            android:id="@+id/id_refresh_discover_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/refresh_discover_button"
            app:srcCompat="@drawable/ic_refresh_blue_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent" />

    </LinearLayout>

    <ListView
        android:id="@+id/id_bluetooth_list_available"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/id_discover_devices_lin_layout"

        android:background="@android:color/transparent">


    </ListView>



</RelativeLayout>